# Global-Data-Finance

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint  404.html  CHECKLIST.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml
.agent/rules/: dev-tester.md  docs-architect.md  senior_dev.md
.github/workflows/: docs.yml  pipeline.yml  publish.yml
assets/stylesheets/: custom.css
dev-guide/advanced-usage/: index.html
dev-guide/api-reference/: index.html
dev-guide/architecture/: index.html
dev-guide/contributing/: index.html
dev-guide/logging-system/: index.html
dev-guide/resource-monitoring/: index.html
dev-guide/retry-strategy/: index.html
dev-guide/testing/: index.html
docs/: .txt  ADAPTERS.md  ARIA2_GUIDE.md  CHECKLIST.md  IMPACT_ANALYSIS.md  PERFORMANCE_GUIDE.md  PROGRESS_BAR.md  README.md  REFACTORING_SUMMARY.md  SECURITY_IMPROVEMENTS.md  TODO.MD  index.md
docs/assets/javascripts/: wide-toggle.js
docs/context/: HistoricalQuoteB3.md  Proj_Historical_Quote.md
docs/dev-guide/: advanced-usage.md  api-reference.md  architecture.md  contributing.md  logging-system.md  resource-monitoring.md  retry-strategy.md  testing.md
docs/reference/: b3-api.md  cvm-api.md  data-formats.md  exceptions.md
docs/user-guide/: b3-docs.md  cvm-docs.md  examples.md  faq.md  installation.md  quickstart.md
examples/: DF.PY  adapter_examples.py  cvm_docs.py  cvm_fundamental_stocks_basic_usage.py  historical_quotes.py  historical_quotes_async.py  historical_quotes_basic_usage.py  historical_quotes_extraction.py  historical_quotes_high_performance.py  tempCodeRunnerFile.py  test_adapters.py
reference/b3-api/: index.html
reference/cvm-api/: index.html
reference/exceptions/: index.html
search/: search_index.json
src/brasil/dados_b3/Opcoes_B3/: app_ops.py
src/brasil/dados_cvm/dados_fundamentalistas/: Criando_pastas.py  Extraindo_arquivos.py  app.py  url_e_nomes.py
src/brasil/gerais/: Baixando_dados.py  Concatenando_docs_antigos.py  funcoes.py
src/brazil/: app_geral.py
src/brazil/cvm/fundamental_stocks_data/: __init__.py
src/brazil/dados_b3/Capital_Social_B3_Acoes/: urls.py
src/brazil/dados_b3/Opcoes_B3/: app_ops.py
src/brazil/dados_b3/historical_quotes/: README.md  __init__.py  site.py
src/brazil/gerais/: funcoes.py
src/core/: __init__.py  config.py  extraction.py  logging_config.py
src/core/utils/: __init__.py  progress.py  resource_monitor.py  retry_strategy.py
src/datafinance/application/b3_docs/: historical_quotes.py
src/datafinance/application/cvm_docs/: __init__.py  fundamental_stocks_data.py
src/datafinance/brazil/: __init__.py
src/datafinance/core/: config.py  logging_config.py
src/datafinance/core/utils/: resource_monitor.py
src/datafinance/macro_infra/: extractor_file.py
src/datafinc/: __init__.py
src/datafinc/application/b3_docs/: __init__.py  extraction_result_formatter.py  historical_quotes.py
src/datafinc/application/cvm_docs/: fundamental_stocks_data.py
src/datafinc/brazil/: __init__.py  app_geral.py
src/datafinc/brazil/cvm/: __init__.py
src/datafinc/brazil/gerais/: funcoes.py
src/datafinc/core/: __init__.py  config.py
src/datafinc/core/utils/: progress.py  resource_monitor.py  retry_strategy.py
src/datafinc/macro_infra/: extractor_file.py  read_files.py  requests_adapter.py
src/globaldatafinance/: __init__.py
src/globaldatafinance/application/: __init__.py
src/globaldatafinance/application/b3_docs/: __init__.py  (+2 more)
src/globaldatafinance/brazil/: __init__.py  app_geral.py
src/globaldatafinance/core/: __init__.py  config.py  logging_config.py
src/globaldatafinance/macro_exceptions/: __init__.py  macro_exceptions.py
src/globaldatafinance/macro_infra/: __init__.py  extractor_file.py  read_files.py  requests_adapter.py
src/macro_exceptions/: __init__.py  exception_network_errors.py  macro_exceptions.py
src/macro_infra/: __init__.py  extractor_file.py  requests_adapter.py
src/presentation/: __init__.py
src/presentation/b3_docs/: historical_quotes.py
src/presentation/cvm_docs/: download_result_formatter.py  fundamental_stocks_data.py
tests/application/b3_docs/: test_extraction_result_formatter.py  test_historical_quotes.py  test_historical_quotes_ensure_parquet.py  test_historical_quotes_result_formatter.py
tests/application/cvm_docs/: test_api_integration.py  test_download_result_formatter.py  test_file_validation.py  test_fundamental_stocks_data.py  test_path_traversal.py
tests/brasil/macro_exceptions/: test_exception_network_errors.py
tests/core/: test_config.py  test_logging_config.py
tests/core/utils/: test_progress.py  test_resource_monitor.py  test_retry_strategy.py
tests/fixtures/: __init__.py  mock_zip_files.py  sample_cotahist_data.py
tests/macro_exceptions/: test_macro_exceptions.py
tests/macro_infra/: test_extractor_file.py  test_read_files_adapter.py  test_requests_adapter.py
tests/presentation/b3_docs/: test_extraction_result_formatter.py  test_historical_quotes.py  test_historical_quotes_ensure_parquet.py  test_historical_quotes_result_formatter.py
tests/presentation/cvm_docs/: test_download_result_formatter.py  test_fundamental_stocks_data.py
tests/tests_/: bb_dashboard.py  read.parquets.py  test_hit.py
user-guide/b3-docs/: index.html
user-guide/cvm-docs/: index.html
user-guide/examples/: index.html
user-guide/faq/: index.html
user-guide/installation/: index.html
user-guide/quickstart/: index.html
(+372 files in other folders)
