[project]
name = "datafin"
version = "0.1.0"
description = ""
authors = [
    {name = "Jordan Estralioto",email = "estraliotojordan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.3.3,<3.0.0",
    "requests>=2.32.5,<3.0.0",
    "wget>=3.2,<4.0",
    "pydantic-settings>=2.11.0,<3.0.0",
]

[tool.poetry]
packages = [{include = "brazil", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.3.0,<5.0.0"
pytest = ">=8.4.2,<9.0.0"
mkdocs = ">=1.6.1,<2.0.0"
types-requests = ">=2.32.4.20250913,<3.0.0.0"
