[project]
name = "datafinance"
version = "0.1.0"
description = "Library for extracting, normalizing and processing global financial and economic data — including market data from exchanges worldwide, regulatory filings, company fundamentals and historical quotes; optimized for high-performance storage and analysis (e.g., Parquet)."
readme = "README.md"
authors = [
    { name = "Jordan Estralioto", email = "estraliotojordan@gmail.com" }
]
keywords = ["finance", "financial-data", "economic-data", "market-data", "global-markets", "exchanges", "fundamentals", "historical-quotes", "macroeconomics", "parquet", "b3", "cvm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries"
]

requires-python = ">=3.12,<4.0"

dependencies = [
    "pydantic-settings>=2.11.0,<3.0.0",
    "pyarrow (>=22.0.0,<23.0.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "polars>=1.0.0,<2.0.0",
    "psutil>=5.9.0,<7.0.0",
    "pandas (>=2.3.3,<3.0.0)",
]

[project.urls]
Homepage = "https://github.com/jor0105/DataFinanc"
Repository = "https://github.com/jor0105/DataFinanc"
Documentation = "https://github.com/jor0105/DataFinanc"
"Bug Tracker" = "https://github.com/jor0105/DataFinanc/issues"

[tool.poetry]
packages = [{include = "datafinance", from = "src"}]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
pytest = "^8.4.2"
pytest-cov = "^5.0.0"
mypy = "^1.11.0"
bandit = "^1.7.9"
pydocstyle = "^6.3.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.22"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
convention = "google"
match = "(?!test_).*\\.py"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
