[project]
name = "globaldatafinance"
version = "0.1.2"
description = "Library for extracting, normalizing and processing global financial and economic data — including market data from exchanges worldwide, regulatory filings, company fundamentals and historical quotes; optimized for high-performance storage and analysis (e.g., Parquet)."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Jordan Estralioto", email = "estraliotojordan@gmail.com" }
]
keywords = ["finance", "financial-data", "economic-data", "market-data", "global-markets", "exchanges", "fundamentals", "historical-quotes", "macroeconomics", "parquet", "b3", "cvm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries"
]

requires-python = ">=3.12,<4.0"

dependencies = [
    "pydantic-settings>=2.11.0,<3.0.0",
    "pyarrow>=22.0.0,<23.0.0",
    "httpx[http2]>=0.28.1,<0.29.0",
    "polars>=1.0.0,<2.0.0",
    "psutil>=5.9.0,<7.0.0",
    "pandas>=2.3.3,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/jor0105/Global-Data-Finance"
Repository = "https://github.com/jor0105/Global-Data-Finance"
Documentation = "https://github.com/jor0105/Global-Data-Finance"
"Bug Tracker" = "https://github.com/jor0105/Global-Data-Finance/issues"

[tool.setuptools.package-data]
globaldatafinance = ["*.txt", "*.md"]

[tool.poetry]
packages = [{ include = "globaldatafinance", from = "src" }]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
pytest = "^8.4.2"
pytest-cov = "^5.0.0"
mypy = "^1.11.0"
bandit = "^1.7.9"
pydocstyle = "^6.3.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.22"
pytest-asyncio = "^1.3.0"
ipykernel = "^7.1.0"
pip-audit = "^2.9.0"
mdformat = "^0.7.17"
mdformat-gfm = "^0.3.5"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
convention = "google"
match = "(?!test_).*\\.py"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv"]

[tool.bandit.per_file_ignores]
"tests/*" = ["B101", "B108"]

[tool.ruff]
# Blue style: 79 characters line length
line-length = 79

[tool.ruff.format]
# Blue style: Single quotes
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
